--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
-    "expo": "^37.0.12",
+    "expo": "^37.0.0",
     "expo-linear-gradient": "~8.1.0",
     "native-base": "2.13.8",
     "npm": "^6.14.5",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-input-code": "^1.0.0",
-    "react-native-reanimated": "^1.7.1",
-    "react-native-screens": "^2.7.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-screens": "~2.2.0",
     "react-navigation-stack": "2.5.1",
-    "react-native-web": "^0.11.4",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-header-buttons": "^3.0.1",
     "react-redux": "^7.1.0",
