--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "expo": "^37.0.12",
     "expo-linear-gradient": "~8.1.0",
+    "expo-updates": "^0.2.9",
     "native-base": "2.13.8",
     "npm": "^6.14.5",
     "react": "16.9.0",
@@ -29,7 +30,8 @@
     "react-navigation-stack": "2.5.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
