--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     },
     "android": {
       "package": "com.umapps.booking",
-      "versionCode": 5,
+      "versionCode": 7,
       "permissions": [
       ]
     },
@@ -15,8 +15,7 @@
     "privacy": "public",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -30,7 +29,9 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*"
+      "assets/fonts/*",
+      "assets/icon.png",
+      "assets/splash.png"
     ]
   }
 }
