Add FCM auth file

--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     },
     "android": {
       "package": "com.umapps.booking",
-      "versionCode": 8,
+      "googleServicesFile": "./google-services.json",
+      "versionCode": 9,
       "permissions": [
       ]
     },
