--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "prettierFix": "prettier '**/*.js' --write",
     "prepush": "npm run prettierCheck && npm run prettierFix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettierCheck && npm run prettierFix"
+    }
+  },
   "dependencies": {
     "@expo/vector-icons": "^10.0.3",
     "@react-native-community/masked-view": "0.1.6",
