--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^37.0.12",
     "expo-linear-gradient": "~8.1.0",
     "expo-updates": "^0.2.9",
+    "moment": "^2.28.0",
     "native-base": "2.13.8",
     "npm": "^6.14.5",
     "react": "16.9.0",
