--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     }
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.3",
-    "@react-native-community/masked-view": "0.1.6",
-    "expo": "^37.0.12",
-    "expo-linear-gradient": "~8.1.0",
-    "expo-updates": "^0.2.9",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "expo": "^39.0.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-updates": "~0.3.3",
     "moment": "^2.28.0",
     "native-base": "2.13.8",
     "npm": "^6.14.5",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-input-code": "^1.0.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "^0.11.7",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.4.13",
     "react-navigation-header-buttons": "^3.0.1",
@@ -44,8 +44,8 @@
     "save": "^2.4.0"
   },
   "devDependencies": {
-    "@react-native-community/async-storage": "^1.12.0",
-    "babel-preset-expo": "^8.1.0",
+    "@react-native-community/async-storage": "~1.12.0",
+    "babel-preset-expo": "^8.3.0",
     "husky": "^4.2.5",
     "prettier": "^2.1.0",
     "redux-devtools-extension": "^2.13.8"
